phase2/y.output
Terminals which are not used

   IF
   THEN
   ELSE
   ENDIF
   ELSEIF
   WHILE
   DO
   BEGINLOOP
   ENDLOOP
   BREAK
   CONTINUE
   END
   EXIT
   READ
   WRITE
   NOT
   TRUE
   FALSE
   QUESTION
   L_BRACKET
   R_BRACKET
   ASSIGN
   GTE
   LTE
   GT
   LT
   NEQ
   EQ
   MOD
   DIV
   MULT
   ADD
   SUB
   AND
   OR
   ELSE_PREC
   IF_PREC


Grammar

    0 $accept: program_start $end

    1 program_start: /* empty */
    2              | program identifier semicolon block endprogram

    3 program: PROGRAM

    4 identifier: IDENT

    5 semicolon: SEMICOLON

    6 block: declarations beginprogram statements

    7 beginprogram: BEGIN_PROGRAM

    8 statements: /* empty */

    9 endprogram: END_PROGRAM

   10 declarations: declaration semicolon declarations
   11             | /* empty */

   12 declaration: identifier identMore colon array left_paren number right_paren of integer
   13            | identifier identMore colon integer

   14 identMore: comma identMore
   15          | /* empty */

   16 colon: COLON

   17 array: ARRAY

   18 left_paren: L_PAREN

   19 number: NUMBER

   20 right_paren: R_PAREN

   21 of: OF

   22 integer: INTEGER

   23 comma: COMMA


Terminals, with rules where they appear

$end (0) 0
error (256)
PROGRAM (258) 3
BEGIN_PROGRAM (259) 7
END_PROGRAM (260) 9
INTEGER (261) 22
ARRAY (262) 17
OF (263) 21
IF (264)
THEN (265)
ELSE (266)
ENDIF (267)
ELSEIF (268)
WHILE (269)
DO (270)
BEGINLOOP (271)
ENDLOOP (272)
BREAK (273)
CONTINUE (274)
END (275)
EXIT (276)
READ (277)
WRITE (278)
NOT (279)
TRUE (280)
FALSE (281)
SEMICOLON (282) 5
COLON (283) 16
COMMA (284) 23
QUESTION (285)
L_BRACKET (286)
R_BRACKET (287)
ASSIGN (288)
NUMBER (289) 19
IDENT (290) 4
R_PAREN (291) 20
L_PAREN (292) 18
GTE (293)
LTE (294)
GT (295)
LT (296)
NEQ (297)
EQ (298)
MOD (299)
DIV (300)
MULT (301)
ADD (302)
SUB (303)
AND (304)
OR (305)
ELSE_PREC (306)
IF_PREC (307)


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
program_start (54)
    on left: 1 2, on right: 0
program (55)
    on left: 3, on right: 2
identifier (56)
    on left: 4, on right: 2 12 13
semicolon (57)
    on left: 5, on right: 2 10
block (58)
    on left: 6, on right: 2
beginprogram (59)
    on left: 7, on right: 6
statements (60)
    on left: 8, on right: 6
endprogram (61)
    on left: 9, on right: 2
declarations (62)
    on left: 10 11, on right: 6 10
declaration (63)
    on left: 12 13, on right: 10
identMore (64)
    on left: 14 15, on right: 12 13 14
colon (65)
    on left: 16, on right: 12 13
array (66)
    on left: 17, on right: 12
left_paren (67)
    on left: 18, on right: 12
number (68)
    on left: 19, on right: 12
right_paren (69)
    on left: 20, on right: 12
of (70)
    on left: 21, on right: 12
integer (71)
    on left: 22, on right: 12 13
comma (72)
    on left: 23, on right: 14


state 0

    0 $accept: . program_start $end

    PROGRAM  shift, and go to state 1

    $default  reduce using rule 1 (program_start)

    program_start  go to state 2
    program        go to state 3


state 1

    3 program: PROGRAM .

    $default  reduce using rule 3 (program)


state 2

    0 $accept: program_start . $end

    $end  shift, and go to state 4


state 3

    2 program_start: program . identifier semicolon block endprogram

    IDENT  shift, and go to state 5

    identifier  go to state 6


state 4

    0 $accept: program_start $end .

    $default  accept


state 5

    4 identifier: IDENT .

    $default  reduce using rule 4 (identifier)


state 6

    2 program_start: program identifier . semicolon block endprogram

    SEMICOLON  shift, and go to state 7

    semicolon  go to state 8


state 7

    5 semicolon: SEMICOLON .

    $default  reduce using rule 5 (semicolon)


state 8

    2 program_start: program identifier semicolon . block endprogram

    IDENT  shift, and go to state 5

    $default  reduce using rule 11 (declarations)

    identifier    go to state 9
    block         go to state 10
    declarations  go to state 11
    declaration   go to state 12


state 9

   12 declaration: identifier . identMore colon array left_paren number right_paren of integer
   13            | identifier . identMore colon integer

    COMMA  shift, and go to state 13

    $default  reduce using rule 15 (identMore)

    identMore  go to state 14
    comma      go to state 15


state 10

    2 program_start: program identifier semicolon block . endprogram

    END_PROGRAM  shift, and go to state 16

    endprogram  go to state 17


state 11

    6 block: declarations . beginprogram statements

    BEGIN_PROGRAM  shift, and go to state 18

    beginprogram  go to state 19


state 12

   10 declarations: declaration . semicolon declarations

    SEMICOLON  shift, and go to state 7

    semicolon  go to state 20


state 13

   23 comma: COMMA .

    $default  reduce using rule 23 (comma)


state 14

   12 declaration: identifier identMore . colon array left_paren number right_paren of integer
   13            | identifier identMore . colon integer

    COLON  shift, and go to state 21

    colon  go to state 22


state 15

   14 identMore: comma . identMore

    COMMA  shift, and go to state 13

    $default  reduce using rule 15 (identMore)

    identMore  go to state 23
    comma      go to state 15


state 16

    9 endprogram: END_PROGRAM .

    $default  reduce using rule 9 (endprogram)


state 17

    2 program_start: program identifier semicolon block endprogram .

    $default  reduce using rule 2 (program_start)


state 18

    7 beginprogram: BEGIN_PROGRAM .

    $default  reduce using rule 7 (beginprogram)


state 19

    6 block: declarations beginprogram . statements

    $default  reduce using rule 8 (statements)

    statements  go to state 24


state 20

   10 declarations: declaration semicolon . declarations

    IDENT  shift, and go to state 5

    $default  reduce using rule 11 (declarations)

    identifier    go to state 9
    declarations  go to state 25
    declaration   go to state 12


state 21

   16 colon: COLON .

    $default  reduce using rule 16 (colon)


state 22

   12 declaration: identifier identMore colon . array left_paren number right_paren of integer
   13            | identifier identMore colon . integer

    INTEGER  shift, and go to state 26
    ARRAY    shift, and go to state 27

    array    go to state 28
    integer  go to state 29


state 23

   14 identMore: comma identMore .

    $default  reduce using rule 14 (identMore)


state 24

    6 block: declarations beginprogram statements .

    $default  reduce using rule 6 (block)


state 25

   10 declarations: declaration semicolon declarations .

    $default  reduce using rule 10 (declarations)


state 26

   22 integer: INTEGER .

    $default  reduce using rule 22 (integer)


state 27

   17 array: ARRAY .

    $default  reduce using rule 17 (array)


state 28

   12 declaration: identifier identMore colon array . left_paren number right_paren of integer

    L_PAREN  shift, and go to state 30

    left_paren  go to state 31


state 29

   13 declaration: identifier identMore colon integer .

    $default  reduce using rule 13 (declaration)


state 30

   18 left_paren: L_PAREN .

    $default  reduce using rule 18 (left_paren)


state 31

   12 declaration: identifier identMore colon array left_paren . number right_paren of integer

    NUMBER  shift, and go to state 32

    number  go to state 33


state 32

   19 number: NUMBER .

    $default  reduce using rule 19 (number)


state 33

   12 declaration: identifier identMore colon array left_paren number . right_paren of integer

    R_PAREN  shift, and go to state 34

    right_paren  go to state 35


state 34

   20 right_paren: R_PAREN .

    $default  reduce using rule 20 (right_paren)


state 35

   12 declaration: identifier identMore colon array left_paren number right_paren . of integer

    OF  shift, and go to state 36

    of  go to state 37


state 36

   21 of: OF .

    $default  reduce using rule 21 (of)


state 37

   12 declaration: identifier identMore colon array left_paren number right_paren of . integer

    INTEGER  shift, and go to state 26

    integer  go to state 38


state 38

   12 declaration: identifier identMore colon array left_paren number right_paren of integer .

    $default  reduce using rule 12 (declaration)
